Full Guard implementation

--- a/src/main/resources/assets/aztic/lang/en_us.lang
+++ b/src/main/resources/assets/aztic/lang/en_us.lang
@@ -1,4 +1,6 @@
 item.aztic.cutlass.name=Cutlass
 item.aztic.cutlass.desc=Cutlass description line 1.\nCutlass description line 2.
 
+item.aztic.fullguard.name=Full Guard
+
 entity.blueslime.name=Blue Slime
